Corrección de errores BackEnd